[WIP][T6268]Performed code review suggested changes

--- a/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup/views/connector_clickup_backend_view.xml
@@ -157,6 +157,7 @@
                         <page string="Advance Configuration">
                             <group>
                                 <group>
+                                <field name="company_id" />
                                 <field name="datetime_filter_project" />
                                 <field name="datetime_filter_task" />
                                 <field name="limit" />
