--- a/connector_clickup/views/res_config_settings_view.xml
+++ b/connector_clickup/views/res_config_settings_view.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-    <!-- <data>
+    <data>
         <record id="res_config_settings_view_form_inherit_clickup" model="ir.ui.view">
             <field name="name">res.config.settings.view.form.clickup</field>
             <field name="model">res.config.settings</field>
-            <field name="priority" eval="10" />
-            <field
-                name="inherit_id"
-                ref="connector_settings.connector_settings_view_form"
-            />
-            <field
-                name="groups_id"
-                eval="[(4, ref('connector_clickup.group_connector_clickup_manager'))]"
-            />
+            <field eval="10" name="priority" />
+            <field name="inherit_id" ref="base.res_config_settings_view_form" />
             <field name="arch" type="xml">
-                <xpath expr="//div[@data-key='connector']" position="inside">
-                    <h2>Clickup</h2>
-                    <div class="row mt16 o_settings_container">
-                        <div
-                            class="col-12 col-lg-6 o_setting_box"
-                            id="connector_clickup_settings"
-                        >
-                            <div class="o_setting_right_pane">
-                                <span class="o_form_label">Clickup Backend</span>
-                                <div class="text-muted">
-                                    Set the default backend.
-                                </div>
-                                <div class="mt16">
-                                    <field
-                                        name="clickup_backend_id"
-                                        widget="selection"
-                                    />
+                <xpath expr="//div[hasclass('settings')]" position="inside">
+                    <div
+                        class="app_settings_block"
+                        data-key="connector"
+                        data-string="Connector"
+                        groups="connector.group_connector_manager"
+                        string="Connector ClickUp"
+                    >
+                        <h2>Clickup</h2>
+                        <div class="row mt16 o_settings_container">
+                            <div
+                                class="col-12 col-lg-6 o_setting_box"
+                                id="connector_clickup_settings"
+                            >
+                                <div class="o_setting_right_pane">
+                                    <span class="o_form_label">Clickup Backend</span>
+                                    <div class="text-muted">Set the default backend.
+                                    </div>
+                                    <div class="mt16">
+                                        <field
+                                            name="clickup_backend_id"
+                                            widget="selection"
+                                        />
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -38,5 +38,5 @@
                 </xpath>
             </field>
         </record>
-    </data> -->
+    </data>
 </odoo>
