[WIP][T6268]work on solving the issue in model_dependency

--- a/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup/views/connector_clickup_backend_view.xml
@@ -162,7 +162,7 @@
                                 <field name="company_id" />
 
                                 <field name="datetime_filter_task" />
-                                <field name="limit" />
+                                <field name="team_id" />
                             </group>
                             </group>
                         </page>
