[WIP][T6268]Test cases for import record and readme file changes

--- a/connector_clickup/views/res_company_view.xml
+++ b/connector_clickup/views/res_company_view.xml
@@ -32,7 +32,7 @@
                     <group string="clickUp">
                         <group>
 
-                            <field name="clickup_backend_id" widget="selection" />
+                            <field name="clickup_backend_id" />
                         </group>
                     </group>
                 </xpath>
