--- a/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup/views/connector_clickup_backend_view.xml
@@ -7,10 +7,10 @@
             <form string="Clickup Backend">
                 <header>
                     <button
-                        name="generate_token"
-                        type="object"
                         class="oe_highlight"
+                        name="generate_token"
                         string="Generate Token"
+                        type="object"
                     />
                 </header>
                 <sheet>
@@ -85,33 +85,20 @@
                             name="password"
                             password="True"
                         />
-
                         <!-- {'invisible':['|',('filed_name_1','=',False),('fieled_name_2','=',False)]} -->
                     </group>
                     <notebook>
                         <page string="Basic Information">
-                            <span>
-                                <b
-                                >1) You need API Token as well as Endpoint Location ID(Folder_id) in order to successfully import Projects, Tasks and Stages from ClickUp Project Management.
-
-
-                                    <br />
-                                    <br />
-                                    2) If you are Importing first time from Connector ClickUp, you need to First Import Projects then Stages and Lastly Tasks.
-
-
-                                    <br />
-                                    <br />
-                                    3) If you made changes only in tasks in ClickUp project management you can directly import tasks in order to update that specific task's data.
-
-
-                                    <br />
-                                    <br />
-                                    4) This module uses binding terminology to import projects, tasks and stages from ClickUp project management so you can not directly delete any of these data from Project module without deleting it from it's co-responsible binding models.
-
-
-                                    <br /></b>
+                            <span
+                            >Please refer the Documentation regarding this module in order to utilize and experience this
+                               in best possible way.
                             </span>
+                            <button
+                                class="oe_highlight"
+                                name="redirect_action"
+                                string="Read Me"
+                                type="object"
+                            />
                         </page>
                         <page string="Import">
                             <span style="margin-right: 10px;">
@@ -123,9 +110,7 @@
                                 string="Import Projects"
                                 type="object"
                             />
-                            <group>
-
-                            </group>
+                            <group />
                             <group />
                             <br />
                             <span style="margin-right: 19px; ">
@@ -137,9 +122,7 @@
                                 string="Import Stages"
                                 type="object"
                             />
-                            <group>
-
-                            </group>
+                            <group />
                             <group />
                             <br />
                             <span style="margin-right: 27px;">
@@ -159,11 +142,10 @@
                         <page string="Advance Configuration">
                             <group>
                                 <group>
-                                <field name="company_id" />
-
-                                <field name="datetime_filter_task" />
-                                <field name="team_id" />
-                            </group>
+                                    <field name="company_id" />
+                                    <field name="datetime_filter_task" />
+                                    <field name="team_id" />
+                                </group>
                             </group>
                         </page>
                         <page string="Export">
